--- a/src/app/admin/project-creator/project-creator.component.css
+++ b/src/app/admin/project-creator/project-creator.component.css
@@ -1,3 +1,4 @@
 .project-creator {
   max-width: 120rem;
+  width: 100%;
 }
